core/src/main/java/com/dnt/itl/grammar/ITLParser.java
// Generated from G:/mymise/in-memory-transfer-language/core/src/main/java/com/dnt/itl/grammar\ITL.g4 by ANTLR 4.5
package com.dnt.itl.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ITLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		EQUALS=1, BIGGER=2, SMALLER=3, BIGGEROREQ=4, SMALLEROREQ=5, NOTEQUAL=6, 
		NOT=7, AND=8, OR=9, SELECT=10, COMMA=11, FROM=12, WHERE=13, AS=14, LPAREN=15, 
		RPAREN=16, DOT=17, LBRACK=18, RBRACK=19, TRUE=20, FALSE=21, NULL=22, MUL=23, 
		DIV=24, ADD=25, SUB=26, MAP=27, REDUCE=28, HexLiteral=29, DecimalLiteral=30, 
		OctalLiteral=31, FloatingPointLiteral=32, CharacterLiteral=33, StringLiteral=34, 
		ID=35, WS=36;
	public static final int
		RULE_ql = 0, RULE_select = 1, RULE_from = 2, RULE_where = 3, RULE_propsSel = 4, 
		RULE_propVar = 5, RULE_propFullName = 6, RULE_propName = 7, RULE_boolExpr = 8, 
		RULE_integerLiteral = 9, RULE_booleanLiteral = 10;
	public static final String[] ruleNames = {
		"ql", "select", "from", "where", "propsSel", "propVar", "propFullName", 
		"propName", "boolExpr", "integerLiteral", "booleanLiteral"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'='", "'>'", "'<'", "'>='", "'<='", "'!='", "'not'", "'and'", "'or'", 
		"'select'", "','", "'from'", "'where'", "'as'", "'('", "')'", "'.'", "'['", 
		"']'", "'true'", "'false'", "'null'", "'*'", "'/'", "'+'", "'-'", "'map'", 
		"'reduce'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "EQUALS", "BIGGER", "SMALLER", "BIGGEROREQ", "SMALLEROREQ", "NOTEQUAL", 
		"NOT", "AND", "OR", "SELECT", "COMMA", "FROM", "WHERE", "AS", "LPAREN", 
		"RPAREN", "DOT", "LBRACK", "RBRACK", "TRUE", "FALSE", "NULL", "MUL", "DIV", 
		"ADD", "SUB", "MAP", "REDUCE", "HexLiteral", "DecimalLiteral", "OctalLiteral", 
		"FloatingPointLiteral", "CharacterLiteral", "StringLiteral", "ID", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override
	@NotNull
	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ITL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ITLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class QlContext extends ParserRuleContext {
		public SelectContext select() {
			return getRuleContext(SelectContext.class,0);
		}
		public FromContext from() {
			return getRuleContext(FromContext.class,0);
		}
		public WhereContext where() {
			return getRuleContext(WhereContext.class,0);
		}
		public QlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ql; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).enterQl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).exitQl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITLVisitor ) return ((ITLVisitor<? extends T>)visitor).visitQl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QlContext ql() throws RecognitionException {
		QlContext _localctx = new QlContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_ql);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(22); 
			select();
			setState(23); 
			from();
			setState(25);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(24); 
				where();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(ITLParser.SELECT, 0); }
		public List<PropsSelContext> propsSel() {
			return getRuleContexts(PropsSelContext.class);
		}
		public PropsSelContext propsSel(int i) {
			return getRuleContext(PropsSelContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ITLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ITLParser.COMMA, i);
		}
		public SelectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).enterSelect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).exitSelect(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITLVisitor ) return ((ITLVisitor<? extends T>)visitor).visitSelect(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectContext select() throws RecognitionException {
		SelectContext _localctx = new SelectContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_select);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27); 
			match(SELECT);
			setState(28); 
			propsSel();
			setState(33);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(29); 
				match(COMMA);
				setState(30); 
				propsSel();
				}
				}
				setState(35);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FromContext extends ParserRuleContext {
		public Token fromSource;
		public Token fromAlias;
		public TerminalNode FROM() { return getToken(ITLParser.FROM, 0); }
		public List<TerminalNode> ID() { return getTokens(ITLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ITLParser.ID, i);
		}
		public TerminalNode AS() { return getToken(ITLParser.AS, 0); }
		public FromContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_from; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).enterFrom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).exitFrom(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITLVisitor ) return ((ITLVisitor<? extends T>)visitor).visitFrom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FromContext from() throws RecognitionException {
		FromContext _localctx = new FromContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_from);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36); 
			match(FROM);
			setState(37); 
			((FromContext)_localctx).fromSource = match(ID);
			setState(40);
			_la = _input.LA(1);
			if (_la==AS) {
				{
				setState(38); 
				match(AS);
				setState(39); 
				((FromContext)_localctx).fromAlias = match(ID);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhereContext extends ParserRuleContext {
		public TerminalNode WHERE() { return getToken(ITLParser.WHERE, 0); }
		public BoolExprContext boolExpr() {
			return getRuleContext(BoolExprContext.class,0);
		}
		public WhereContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_where; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).enterWhere(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).exitWhere(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITLVisitor ) return ((ITLVisitor<? extends T>)visitor).visitWhere(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhereContext where() throws RecognitionException {
		WhereContext _localctx = new WhereContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_where);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42); 
			match(WHERE);
			setState(43); 
			boolExpr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropsSelContext extends ParserRuleContext {
		public PropVarContext propVar() {
			return getRuleContext(PropVarContext.class,0);
		}
		public TerminalNode AS() { return getToken(ITLParser.AS, 0); }
		public TerminalNode ID() { return getToken(ITLParser.ID, 0); }
		public PropsSelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propsSel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).enterPropsSel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).exitPropsSel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITLVisitor ) return ((ITLVisitor<? extends T>)visitor).visitPropsSel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropsSelContext propsSel() throws RecognitionException {
		PropsSelContext _localctx = new PropsSelContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_propsSel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45); 
			propVar(0);
			setState(48);
			_la = _input.LA(1);
			if (_la==AS) {
				{
				setState(46); 
				match(AS);
				setState(47); 
				match(ID);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropVarContext extends ParserRuleContext {
		public PropVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propVar; }
	 
		public PropVarContext() { }
		public void copyFrom(PropVarContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FloatVarContext extends PropVarContext {
		public TerminalNode FloatingPointLiteral() { return getToken(ITLParser.FloatingPointLiteral, 0); }
		public FloatVarContext(PropVarContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).enterFloatVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).exitFloatVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITLVisitor ) return ((ITLVisitor<? extends T>)visitor).visitFloatVar(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MulDivContext extends PropVarContext {
		public Token op;
		public List<PropVarContext> propVar() {
			return getRuleContexts(PropVarContext.class);
		}
		public PropVarContext propVar(int i) {
			return getRuleContext(PropVarContext.class,i);
		}
		public TerminalNode MUL() { return getToken(ITLParser.MUL, 0); }
		public TerminalNode DIV() { return getToken(ITLParser.DIV, 0); }
		public MulDivContext(PropVarContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).enterMulDiv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).exitMulDiv(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITLVisitor ) return ((ITLVisitor<? extends T>)visitor).visitMulDiv(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AddSubContext extends PropVarContext {
		public Token op;
		public List<PropVarContext> propVar() {
			return getRuleContexts(PropVarContext.class);
		}
		public PropVarContext propVar(int i) {
			return getRuleContext(PropVarContext.class,i);
		}
		public TerminalNode ADD() { return getToken(ITLParser.ADD, 0); }
		public TerminalNode SUB() { return getToken(ITLParser.SUB, 0); }
		public AddSubContext(PropVarContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).enterAddSub(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).exitAddSub(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITLVisitor ) return ((ITLVisitor<? extends T>)visitor).visitAddSub(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ParensContext extends PropVarContext {
		public TerminalNode LPAREN() { return getToken(ITLParser.LPAREN, 0); }
		public PropVarContext propVar() {
			return getRuleContext(PropVarContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(ITLParser.RPAREN, 0); }
		public ParensContext(PropVarContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).enterParens(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).exitParens(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITLVisitor ) return ((ITLVisitor<? extends T>)visitor).visitParens(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MapFuncVarContext extends PropVarContext {
		public TerminalNode MAP() { return getToken(ITLParser.MAP, 0); }
		public TerminalNode LPAREN() { return getToken(ITLParser.LPAREN, 0); }
		public TerminalNode ID() { return getToken(ITLParser.ID, 0); }
		public List<TerminalNode> COMMA() { return getTokens(ITLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ITLParser.COMMA, i);
		}
		public TerminalNode RPAREN() { return getToken(ITLParser.RPAREN, 0); }
		public List<PropVarContext> propVar() {
			return getRuleContexts(PropVarContext.class);
		}
		public PropVarContext propVar(int i) {
			return getRuleContext(PropVarContext.class,i);
		}
		public MapFuncVarContext(PropVarContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).enterMapFuncVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).exitMapFuncVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITLVisitor ) return ((ITLVisitor<? extends T>)visitor).visitMapFuncVar(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ReduceFuncVarContext extends PropVarContext {
		public TerminalNode REDUCE() { return getToken(ITLParser.REDUCE, 0); }
		public TerminalNode LPAREN() { return getToken(ITLParser.LPAREN, 0); }
		public TerminalNode ID() { return getToken(ITLParser.ID, 0); }
		public List<TerminalNode> COMMA() { return getTokens(ITLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ITLParser.COMMA, i);
		}
		public TerminalNode RPAREN() { return getToken(ITLParser.RPAREN, 0); }
		public List<PropVarContext> propVar() {
			return getRuleContexts(PropVarContext.class);
		}
		public PropVarContext propVar(int i) {
			return getRuleContext(PropVarContext.class,i);
		}
		public ReduceFuncVarContext(PropVarContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).enterReduceFuncVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).exitReduceFuncVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITLVisitor ) return ((ITLVisitor<? extends T>)visitor).visitReduceFuncVar(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IntVarContext extends PropVarContext {
		public IntegerLiteralContext integerLiteral() {
			return getRuleContext(IntegerLiteralContext.class,0);
		}
		public IntVarContext(PropVarContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).enterIntVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).exitIntVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITLVisitor ) return ((ITLVisitor<? extends T>)visitor).visitIntVar(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NullVarContext extends PropVarContext {
		public TerminalNode NULL() { return getToken(ITLParser.NULL, 0); }
		public NullVarContext(PropVarContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).enterNullVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).exitNullVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITLVisitor ) return ((ITLVisitor<? extends T>)visitor).visitNullVar(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CharVarContext extends PropVarContext {
		public TerminalNode CharacterLiteral() { return getToken(ITLParser.CharacterLiteral, 0); }
		public CharVarContext(PropVarContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).enterCharVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).exitCharVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITLVisitor ) return ((ITLVisitor<? extends T>)visitor).visitCharVar(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FuncVarContext extends PropVarContext {
		public TerminalNode ID() { return getToken(ITLParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(ITLParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(ITLParser.RPAREN, 0); }
		public List<PropVarContext> propVar() {
			return getRuleContexts(PropVarContext.class);
		}
		public PropVarContext propVar(int i) {
			return getRuleContext(PropVarContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ITLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ITLParser.COMMA, i);
		}
		public FuncVarContext(PropVarContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).enterFuncVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).exitFuncVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITLVisitor ) return ((ITLVisitor<? extends T>)visitor).visitFuncVar(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DirectPropVarContext extends PropVarContext {
		public PropFullNameContext propFullName() {
			return getRuleContext(PropFullNameContext.class,0);
		}
		public DirectPropVarContext(PropVarContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).enterDirectPropVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).exitDirectPropVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITLVisitor ) return ((ITLVisitor<? extends T>)visitor).visitDirectPropVar(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BooleanVarContext extends PropVarContext {
		public BooleanLiteralContext booleanLiteral() {
			return getRuleContext(BooleanLiteralContext.class,0);
		}
		public BooleanVarContext(PropVarContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).enterBooleanVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).exitBooleanVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITLVisitor ) return ((ITLVisitor<? extends T>)visitor).visitBooleanVar(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StringVarContext extends PropVarContext {
		public TerminalNode StringLiteral() { return getToken(ITLParser.StringLiteral, 0); }
		public StringVarContext(PropVarContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).enterStringVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITLListener ) ((ITLListener)listener).exitStringVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITLVisitor ) return ((ITLVisitor<? extends T>)visitor).visitStringVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropVarContext propVar() throws RecognitionException {
		return propVar(0);
	}

	private PropVarContext propVar(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		PropVarContext _localctx = new PropVarContext(_ctx, _parentState);
		PropVarContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_propVar, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				_localctx = new DirectPropVarContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(51); 
				propFullName();
				}
				break;
			case 2:
				{
				_localctx = new ParensContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(52); 
				match(LPAREN);
				setState(53); 
				propVar(0);
				setState(54); 
				match(RPAREN);
				}
				break;
			case 3:
				{
				_localctx = new IntVarContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(56); 
				integerLiteral();
				}
				break;
			case 4:
				{
				_localctx = new FloatVarContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(57); 
				match(FloatingPointLiteral);
				}
				break;
			case 5:
				{
				_localctx = new CharVarContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(58); 
				match(CharacterLiteral);
				}
				break;
			case 6:
				{
				_localctx = new StringVarContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(59); 
				match(StringLiteral);
				}
				break;
			case 7:
				{
				_localctx = new BooleanVarContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(60); 
				booleanLiteral();
				}
				break;
			case 8:
				{
				_localctx = new NullVarContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(61); 
				match(NULL);
				}
				break;
			case 9:
				{
				_localctx = new MapFuncVarContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(62); 
				match(MAP);
				setState(63); 
				match(LPAREN);
				setState(64); 
				match(ID);
				setState(65); 
				match(COMMA);
				setState(67);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPAREN) | (1L << TRUE) | (1L << FALSE) | (1L << NULL) | (1L << MAP) | (1L << REDUCE) | (1L << HexLiteral) | (1L << DecimalLiteral) | (1L << OctalLiteral) | (1L << FloatingPointLiteral) | (1L << CharacterLiteral) | (1L << StringLiteral) | (1L << ID))) != 0)) {
					{
					setState(66); 
					propVar(0);
					}
				}

				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(69); 
					match(COMMA);
					setState(70); 
					propVar(0);
					}
					}
					setState(75);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(76); 
				match(RPAREN);
				}
				break;
			case 10:
				{
				_localctx = new ReduceFuncVarContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(77); 
				match(REDUCE);
				setState(78); 
				match(LPAREN);
				setState(79); 
				match(ID);
				setState(80); 
				match(COMMA);
				setState(82);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPAREN) | (1L << TRUE) | (1L << FALSE) | (1L << NULL) | (1L << MAP) | (1L << REDUCE) | (1L << HexLiteral) | (1L << DecimalLiteral) | (1L << OctalLiteral) | (1L << FloatingPointLiteral) | (1L << CharacterLiteral) | (1L << StringLiteral) | (1L << ID))) != 0)) {
					{
					setState(81); 
					propVar(0);
					}
				}

				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(84); 
					match(COMMA);
					setState(85); 
					propVar(0);
					}
					}
					setState(90);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(91); 
				match(RPAREN);
				}
				break;
			case 11:
				{
				_localctx = new FuncVarContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(92); 
				match(ID);
				setState(93); 
				match(LPAREN);
				setState(95);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPAREN) | (1L << TRUE) | (1L << FALSE) | (1L << NULL) | (1L << MAP) | (1L << REDUCE) | (1L << HexLiteral) | (1L << DecimalLiteral) | (1L << OctalLiteral) | (1L << FloatingPointLiteral) | (1L << CharacterLiteral) | (1L << StringLiteral) | (1L << ID))) != 0)) {
					{
					setState(94); 
					propVar(0);
					}
				}
